# cub-hip

./: .gitignore  CHANGE_LOG.TXT  CMakeLists.txt  README.md  block__exchange_8cuh_source.html  block__load_8cuh_source.html  block__scan_8cuh_source.html  classcub_1_1_block_scan.html  classcub_1_1_warp_scan.html  common.mk  device__histogram_8cuh_source.html  device__radix__sort_8cuh_source.html  device__reduce_8cuh_source.html  device__scan_8cuh_source.html  device__select_8cuh_source.html  group___simt_utils.html  namespacecub.html  structcub_1_1_device_histogram.html  structcub_1_1_device_segmented_radix_sort.html  util__type_8cuh_source.html
cub/: .util_arch.cuh.swp  cub.cuh  util_allocator.cuh  util_arch.cuh  util_debug.cuh  util_device.cuh  util_ptx.cuh  util_type.cuh
cub/agent/: agent_histogram.cuh  agent_radix_sort_downsweep.cuh  agent_radix_sort_upsweep.cuh  agent_reduce.cuh  agent_reduce_by_key.cuh  agent_rle.cuh  agent_scan.cuh  agent_segment_fixup.cuh  agent_select_if.cuh  agent_spmv_csrt.cuh  agent_spmv_orig.cuh  agent_spmv_row_based.cuh  single_pass_scan_operators.cuh
cub/block/: block_adjacent_difference.cuh  block_discontinuity.cuh  block_exchange.cuh  block_histogram.cuh  block_load.cuh  block_radix_rank.cuh  block_radix_sort.cuh  block_raking_layout.cuh  block_reduce.cuh  block_scan.cuh  block_shuffle.cuh  block_store.cuh
cub/block/specializations/: block_histogram_atomic.cuh  block_histogram_sort.cuh  block_reduce_raking.cuh  block_reduce_raking_commutative_only.cuh  block_reduce_warp_reductions.cuh  block_scan_raking.cuh  block_scan_warp_scans.cuh  block_scan_warp_scans2.cuh  block_scan_warp_scans3.cuh
cub/device/: device_histogram.cuh  device_partition.cuh  device_radix_sort.cuh  device_reduce.cuh  device_run_length_encode.cuh  device_scan.cuh  device_segmented_radix_sort.cuh  device_segmented_reduce.cuh  device_select.cuh  device_spmv.cuh
cub/device/dispatch/: .dispatch_reduce_by_key.cuh.swp  .dispatch_scan.cuh.swp  dispatch_histogram.cuh  dispatch_radix_sort.cuh  dispatch_reduce.cuh  dispatch_reduce_by_key.cuh  dispatch_rle.cuh  dispatch_scan.cuh  dispatch_select_if.cuh  dispatch_spmv_csrt.cuh  dispatch_spmv_orig.cuh  dispatch_spmv_row_based.cuh
cub/grid/: grid_barrier.cuh  grid_even_share.cuh  grid_queue.cuh
cub/iterator/: arg_index_input_iterator.cuh  cache_modified_input_iterator.cuh  cache_modified_output_iterator.cuh  constant_input_iterator.cuh  counting_input_iterator.cuh  discard_output_iterator.cuh  tex_obj_input_iterator.cuh  tex_ref_input_iterator.cuh  transform_input_iterator.cuh
cub/thread/: thread_load.cuh  thread_operators.cuh  thread_reduce.cuh  thread_scan.cuh  thread_search.cuh  thread_store.cuh
cub/warp/: warp_reduce.cuh  warp_scan.cuh
cub/warp/specializations/: warp_default_mask.cuh  warp_reduce_shfl.cuh  warp_reduce_smem.cuh  warp_scan_shfl.cuh  warp_scan_smem.cuh
docs/: device_perf.xls
examples/block/: example_block_radix_sort.cpp  example_block_radix_sort.cu  example_block_reduce.cpp  example_block_reduce.cu  example_block_scan.cpp  example_block_scan.cu  reduce_by_key.cpp  reduce_by_key.cu
examples/device/: Makefile  example_device_partition_flagged.cpp  example_device_partition_flagged.cu  example_device_partition_if.cu  example_device_radix_sort.cu  example_device_reduce.cpp  example_device_reduce.cu  example_device_scan.cu  example_device_select_flagged.cu  example_device_select_if.cu  example_device_select_unique.cpp  example_device_select_unique.cu  example_device_sort_find_non_trivial_runs.cu
experimental/: histogram_compare.cu  sparse_matrix.h  spmv_compare.cpp  spmv_compare.cu
experimental/defunct/: example_coo_spmv.cpp  example_coo_spmv.cu  test_device_seg_reduce.cpp  test_device_seg_reduce.cu
experimental/histogram/: histogram_cub.h  histogram_gmem_atomics.h  histogram_smem_atomics.h
hip_helpers/: forwarder.hpp
test/: Makefile  link.cu  link_a.cpp  link_a.cu  link_b.cpp  link_b.cu  mersenne.h  test_allocator.cpp  test_allocator.cu  test_block_histogram.cpp  test_block_histogram.cu  test_block_load_store.cpp  test_block_load_store.cu  test_block_load_store.cu.cpp  test_block_radix_sort.cpp  test_block_radix_sort.cu  test_block_radix_sort.cu.cpp  test_block_reduce.cpp  test_block_reduce.cu  test_block_reduce.cu.cpp  test_block_scan.cpp  test_block_scan.cu  test_block_scan.cu.cpp  test_device_histogram.cpp  test_device_histogram.cu  test_device_radix_sort.cpp  test_device_radix_sort.cu  test_device_radix_sort.cu.cpp  test_device_reduce.cpp  test_device_reduce.cu  test_device_reduce.cu.cpp  test_device_reduce_by_key.cpp  test_device_reduce_by_key.cu  test_device_reduce_by_key.cu.cpp  test_device_run_length_encode.cpp  test_device_run_length_encode.cu  test_device_run_length_encode.cu.cpp  test_device_scan.cpp  test_device_scan.cu  test_device_scan.cu.cpp  (+17 more)
tune/: tune_device_reduce.cu
